# wpu-cli

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt
cli/: clipboard.py  dependencies.py  exceptions.py  logger.py  utils.py
cli/edutech/: __init__.py  dependencies.py  options.py  services.py  types.py  validators.py
cli/fuzz/: arabic.py  callbacks.py  controllers.py  dependencies.py  enums.py  loaders.py  options.py  processors.py  readers.py  scorers.py  services.py  writers.py
cli/salaries/: controllers.py  dependencies.py  enums.py  mappers.py  models.py  options.py  services.py  types.py  utils.py
cli/taxes/: __init__.py  callback.py  callbacks.py  constants.py  controllers.py  dependencies.py  exceptions.py  exporters.py  options.py  schemas.py  services.py  tables.py  writers.py
cli/templates/: callback.py  callbacks.py  controllers.py  dependencies.py  generators.py  help.py  loaders.py  options.py  readers.py  services.py  types.py  writers.py
cli/vouchers/: __init__.py  controllers.py  schemas.py  services.py
cli/whatsapp/: __init__.py  controllers.py  loaders.py  options.py  parsers.py  readers.py  schemas.py  services.py
src/: db.py  models.py  utils.py
src/capacity_calculator/: __init__.py  controllers.py  tables.py  typer.py  utils.py
src/central_bank_scraper/: controllers.py  typer.py
src/dollar_scrapper/: controllers.py  schemas.py  tables.py  typer.py
src/payment_orders/: constants.py  controllers.py  schemas.py  typer.py
src/salaries_calculator/: __init__.py  controllers.py  (+6 more)
templates/: order-voucher.docx  order.docx
(+66 files in other folders)
