[project]
name = "wpu-cli"
version = "0.1.0"
description = "CLI application for make some automation tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "icecream>=2.1.3",
    "openpyxl>=3.1.5",
    "peewee>=3.17.8",
    "playwright>=1.49.0",
    "python-dotenv>=1.0.1",
    "selectolax>=0.3.26",
    "typer>=0.13.1",
    "xlwings>=0.33.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
