[project]
name = "wpu-cli"
version = "0.1.0"
description = "CLI application for make some automation tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "httpx>=0.28.0",
    "openpyxl>=3.1.5",
    "playwright>=1.49.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "selectolax>=0.4.0",
    "typer>=0.13.1",
    "xlwings>=0.33.4",
]

[dependency-groups]
dev = ["pytest>=8.3.3"]
